<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- 
	<ImageView android:src="@drawable/restart_background" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:scaleType="fitXY" > </ImageView>
	-->
	<RelativeLayout android:id="@+id/RelativeLayout02"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<TextView android:layout_height="wrap_content" android:text="@string/restart_text"
			android:layout_width="wrap_content" android:id="@+id/restart_text"
			android:layout_centerInParent="true" android:textSize="20px"
			android:paddingBottom="30px" android:textColor="#ffffff" 
			android:paddingLeft="30px" android:paddingRight="30px" 
			android:paddingTop="30px" android:gravity="center"></TextView>


		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true" android:layout_marginBottom="10px">
			<Button android:text="@string/menu_record" android:id="@+id/restart_record" android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:minWidth="120px"></Button>
			<Button android:text="@string/menu_setting" android:id="@+id/restart_setting" android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:minWidth="120px"></Button>
			<Button android:text="@string/menu_view" android:id="@+id/restart_view" android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:minWidth="120px"></Button>
			<Button android:text="@string/menu_exit" android:id="@+id/restart_exit" android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:minWidth="120px"></Button>
		</LinearLayout>

	</RelativeLayout>
</FrameLayout>
